# contextcraft

./: .gitignore  README.md  pyproject.toml
src/contextcraft/: __init__.py  config.py
src/contextcraft/lms/: __init__.py  openai.py
src/contextcraft/programs/: __init__.py
